fix(ui): resolve a problem not showing ellipsis when texts in flex are overflowing
rename text-ellipsis mixin to text-overflow-ellipsis
add "min-width: 0" to the mixin
add "overflow: hidden" to flex container

ref: https://css-tricks.com/flexbox-truncated-text/

--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -7,7 +7,8 @@
   align-items: center;
 }
 
-@mixin text-ellipsis($max-width: 100%) {
+@mixin text-overflow-ellipsis($max-width: 100%) {
+  min-width: 0;
   width: $max-width;
   text-overflow: ellipsis;
   white-space: nowrap;
